--- a/index.html
+++ b/index.html
@@ -8,6 +8,54 @@
   <title>Flexbox Project</title>
 </head>
 <body>
+  <nav class="navbar">
+    <div class="container">
+      <h2 class="logo">Header Logo</h2>
+      <ul class="nav">
+        <li class="link secondary-text"><a href="#">header link one</a></li>
+        <li class="link secondary-text"><a href="#">header link two</a></li>
+        <li class="link secondary-text"><a href="#">header link three</a></li>
+      </ul>
+    </div>
+  </nav>
+  <header class="header">
+    <div class="container">
+      <section class="text">
+        <h1 class="title">This website is awesome</h1>
+        <p class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <a href="#">Sign up</a>
+      </section>
+      <section class="image">
+        <span>this is a placeholder for an image</span>
+      </section>
+    </div>
+  </header>
+  <section class="main">
+    <div class="container">
+      <h3>Some random information</h3>
+      <div class="boxes">
+        <div class="box"></div>
+        <p>this is some subtext under an ilustration or image</p>
+      </div>
+      <div class="boxes">
+        <div class="box"></div>
+        <p>this is some subtext under an ilustration or image</p>
+      </div>
+      <div class="boxes">
+      <div class="box"></div>
+        <p>this is some subtext under an ilustration or image</p></div>
+      <div class="boxes"><div class="box"></div>
+      <p>this is some subtext under an ilustration or image</p></div>
+    </div>
+  </section>
+
+  
+  
+  
+  
+  
+  
+  
   <div class="container">
     <section class="header">
     <header>
