--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
     </div>
   </section>
       <footer class="footer">
-      <h3>Copyright &copy; The Odin Project 2022</h3>
+        <div class="container">
+          <h3>Copyright &copy; The Odin Project 2022</h3>
+        </div>
     </footer>
   </div>
 </body>
