--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="container">
+    <div class="container"> <!--with this container in every section we can center it and used an specefic width-->
       <h2 class="logo">Header Logo</h2>
       <ul class="nav">
         <li class="link secondary-text"><a href="#">header link one</a></li>
@@ -19,7 +19,7 @@
     </div>
   </nav>
   <header class="header">
-    <div class="container">
+    <div class="container"><!--with this container in every section we can center it and used an specefic width-->
       <section class="text">
         <h1 class="title">This website is awesome</h1>
         <p class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
@@ -31,7 +31,7 @@
     </div>
   </header>
   <section class="main">
-    <div class="container">
+    <div class="container"><!--with this container in every section we can center it and used an specefic width-->
       <h3>Some random information</h3>
       <div class="boxes">
         <div class="box"></div>
@@ -49,7 +49,7 @@
     </div>
   </section>
   <section class="quote">
-    <div class="container">
+    <div class="container"><!--with this container in every section we can center it and used an specefic width-->
       <figure>
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
         <figcaption>—Thor, God of Thunder</figcaption>
@@ -57,7 +57,7 @@
     </div>
   </section>
   <section class="signUp">
-    <div class="container">
+    <div class="container"><!--with this container in every section we can center it and used an specefic width-->
       <div class="text">
         <span>Call to action! It's time!</span>
         <p>Sign up for our product by clicking that button right over there!</p>
@@ -66,7 +66,7 @@
     </div>
   </section>
       <footer class="footer">
-        <div class="container">
+        <div class="container"><!--with this container in every section we can center it and used an specefic width-->
           <h3>Copyright &copy; The Odin Project 2022</h3>
         </div>
     </footer>
