--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <section class="main">
     <div class="container"><!--with this container in every section we can center it and used an specefic width-->
       <h3>Some random information</h3>
+      <div class="box-container">
       <div class="boxes">
         <div class="box"></div>
         <p>this is some subtext under an ilustration or image</p>
@@ -47,6 +48,7 @@
       <div class="boxes"><div class="box"></div>
       <p>this is some subtext under an ilustration or image</p></div>
     </div>
+  </div>
   </section>
   <section class="quote">
     <div class="container"><!--with this container in every section we can center it and used an specefic width-->
