--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <span>Call to action! It's time!</span>
         <p>Sign up for our product by clicking that button right over there!</p>
       </div>
-      <a href="#">Sign up</a>
+      <a href="#" class="signButton">Sign up</a>
     </div>
   </section>
       <footer class="footer">
